@@ -1,9 +1,8 @@
 package com.sparta.second.service;
 
-import com.sparta.second.dto.MenuListResponseDto;
-import com.sparta.second.dto.MenuRequestDto;
-import com.sparta.second.dto.MenuResponseDto;
+import com.sparta.second.dto.*;
 import com.sparta.second.entity.Menu;
+import com.sparta.second.entity.MenuCategory;
 import com.sparta.second.entity.Shop;
 import com.sparta.second.entity.User;
 import com.sparta.second.repository.MenuRepository;
@@ -16,6 +15,7 @@ import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.RejectedExecutionException;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,10 +24,13 @@ public class MenuService {
     private final MenuRepository menuRepository;
     private final ShopService shopService;
 
+
+
     // 메뉴 전체 조회
     public MenuListResponseDto getMenus() {
-        List<Menu> menuList = menuRepository.findAllByOrderByModifiedAtDesc();
-        return new MenuListResponseDto(menuList.stream().map(MenuResponseDto::new).toList());
+        List<MenuResponseDto> menuList = menuRepository.findAllByOrderByModifiedAtDesc()
+                .stream().map(MenuResponseDto::new).collect(Collectors.toList());
+        return new MenuListResponseDto(menuList);
     }
 
     // 메뉴 상세 조회
@@ -37,6 +40,12 @@ public class MenuService {
         MenuResponseDto menuResponseDto = new MenuResponseDto(menu);
 
         return menuResponseDto;
+    }
+
+    public MenuListResponseDto getMenuCategory(Long shopId , MenuCategory menuCategory) {
+        List<MenuResponseDto> menuResponseDtoList = menuRepository.findByShop_ShopIdAndMenuCategory(shopId,menuCategory)
+                .stream().map(MenuResponseDto::new).collect(Collectors.toList());
+        return new MenuListResponseDto(menuResponseDtoList);
     }
 
     // 메뉴 생성
@@ -49,10 +58,21 @@ public class MenuService {
         }
     }
 
+    // 메뉴 수정
+    @Transactional
+    public void updateMenu(Long menuId, MenuRequestDto menurequestDto, User user) {
+        Menu menu = findMenu(menuId);
+
+        if (!menu.getShop().getUser().getUserName().equals(user.getUserName())) {
+            throw new RejectedExecutionException();
+        }
+        menu.update(menurequestDto);
+    }
+
     //메뉴 삭제
     @Transactional
-    public void deleteMenu(Long menu_id, User user) {
-        Menu menu = findMenu(menu_id);
+    public void deleteMenu(Long menuId, User user) {
+        Menu menu = findMenu(menuId);
 
         if (!menu.getShop().getUser().getUserName().equals(user.getUserName())) {
             throw new RejectedExecutionException();
@@ -61,19 +81,11 @@ public class MenuService {
         }
     }
 
-    // 메뉴 수정
-    @Transactional
-    public void updateMenu(Long menu_id, MenuRequestDto menurequestDto, User user) {
-        Menu menu = findMenu(menu_id);
 
-        if (!menu.getShop().getUser().getUserName().equals(user.getUserName())) {
-            throw new RejectedExecutionException();
-        }
-        menu.update(menurequestDto);
-
-    }
     public Menu findMenu(Long id) {
         return menuRepository.findById(id).orElseThrow(() ->
                 new IllegalArgumentException("선택한 메뉴가 존재하지 않습니다."));
     }
+
+
 }
